--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="content_tab_home">Welcome Home</string>
+    <string name="dark_mode">Dark Mode</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello">Hello blank fragment</string>
