- sudah berhasil push data ke database - fab menunjukkan gambar love dgn baik - membuat page favorite tapi msh gagal memperlihatkan isi dr database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="previous">Previous</string>
     <string name="content_tab_home">Welcome Home</string>
     <string name="dark_mode">Dark Mode</string>
+    <string name="favorite">Ke Halaman Favorite</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello">Hello blank fragment</string>
